--- a/tuku/src/main/resources/application.yml
+++ b/tuku/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-# ˝æ›ø‚≈‰÷√
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
@@ -26,3 +25,10 @@ spring:
       remove-abandoned-timeout: 1800
       transaction-query-timeout: 6000
 
+
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
+  params: count=countSql
+  page-size-zero: true
